<resources>
    <string name="app_name">News App</string>
    <string name="settings_title">Settings</string>

    <!--Strings for Category Preference -->
    <string name="settings_section_label">Category</string>
    <string name="settings_section_key" translatable="false">section</string>
    <string name="settings_section_default" translatable="false">@string/settings_section_technology_value</string>

    <!--Labels and values for each section category -->
    <string name="settings_section_technology_label">Technology</string>
    <string name="settings_section_technology_value" translatable="false">technology</string>

    <string name="settings_section_weather_label">Weather</string>
    <string name="settings_section_weather_value" translatable="false">weather</string>

    <string name="settings_section_sport_label">Sport</string>
    <string name="settings_section_sport_value" translatable="false">sport</string>

    <string name="settings_section_business_label">Business</string>
    <string name="settings_section_business_value" translatable="false">business</string>

    <string name="settings_section_politics_label">Politics</string>
    <string name="settings_section_politics_value" translatable="false">politics</string>


    <!--Strings for News per page Preference -->
    <string name="settings_page_size_label">News per page</string>
    <string name="settings_page_size_key" translatable="false">page-size</string>
    <string name="settings_page_size_default" translatable="false">12</string>
    <string name="edit_text_hint">Max number: 50</string>
    <string name="no_internet">No internet connection.</string>
    <string name="no_articles">No articles found.</string>
</resources>